# gitmoji-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: changelog.yml  ci.yml  pages.yml
action/: action.yml
docs/: _config.yml  index.html
src/gitmoji_ai/: __init__.py  ai_engine.py  changelog.py  cli.py  config.py  git_ops.py  sponsors.py  suggest.py  team.py  usage.py
tests/: test_core.py
