[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmoji-ai"
version = "1.0.0"
description = "🤖 AI-powered commit messages & changelog generator. Never write a bad commit again."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "GitMoji AI Team"}
]
keywords = ["git", "commit", "ai", "changelog", "conventional-commits", "openai", "gpt", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
gitmoji-ai = "gitmoji_ai.cli:app"
gmai = "gitmoji_ai.cli:app"

[project.urls]
Homepage = "https://github.com/your-username/gitmoji-ai"
Documentation = "https://github.com/your-username/gitmoji-ai#readme"
Repository = "https://github.com/your-username/gitmoji-ai"
Issues = "https://github.com/your-username/gitmoji-ai/issues"
Changelog = "https://github.com/your-username/gitmoji-ai/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
